<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach_cream"
    tools:context=".ui.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <!-- Top section with title -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/home_LBL_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/home"
            android:textColor="@color/olive_green"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Search Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/home_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:boxStrokeColor="@color/olive_green"
            app:hintTextColor="@color/olive_green"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_LBL_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/home_EDT_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/olive_green"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:singleLine="true"
                android:textColor="@color/olive_green"
                android:textColorHint="@color/olive_green" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Section Subtitle -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/allPost_LBL_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/all_posts"
            android:textColor="@color/soft_apricot"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_input_layout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/home_LBL_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/olive_green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_RV_List"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/home_header"
        android:layout_marginTop="16dp" />

</RelativeLayout>
