<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach_cream"
    tools:context=".ui.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <!-- Title -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_LBL_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:padding="20dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/olive_green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Section Subtitle -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/MyAddedBooks_LBL_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/my_added_books"
            android:textColor="@color/soft_apricot"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_LBL_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_BTN_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:backgroundTint="@color/terracotta"
            android:textColor="@color/olive_green"
            app:icon="@drawable/ic_logout"
            app:iconPadding="8dp"
            app:iconGravity="textStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_RV_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profile_header"
        android:layout_marginTop="16dp" />

</RelativeLayout>
